2022-10-06T01:45:59Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3193937034
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 101 145 / 108 152
* notice: next accum: outdated-unq outdated-all / unq all: 101 145 / 109 153
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-05]

2022-10-03T16:33:25Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3175827887
* notice: last 14d: unq all: 2 7
* notice: prev accum: outdated-unq outdated-all / unq all: 101 145 / 107 151
* notice: next accum: outdated-unq outdated-all / unq all: 101 145 / 108 152
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-03]

2022-10-03T08:27:23Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3172681070
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 100 144 / 107 151
* notice: next accum: outdated-unq outdated-all / unq all: 101 145 / 107 151
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-19] / []

2022-10-02T08:24:32Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3167885088
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 99 143 / 106 150
* notice: next accum: outdated-unq outdated-all / unq all: 100 144 / 107 151
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-18] / [2022-10-02]

2022-09-30T08:32:12Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3157379309