@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-06T01:45:59Z",
-  "count_outdated" : 145,
-  "uniques_outdated" : 101,
+  "timestamp" : "2022-10-06T08:27:15Z",
+  "count_outdated" : 146,
+  "uniques_outdated" : 102,
   "count" : 153,
   "uniques" : 109,
   "clones" : [
-    {
-      "timestamp": "2022-09-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-23T00:00:00Z",
       "count": 1,
